core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/valid/Windows/Modes/mode08.wsmode
<?xml version="1.0" encoding="UTF-8"?>

<mode version="2.4">
    <name unique="mode08" includes="mode00,mode01"/>
    <kind type="view" />
    <state type="joined" minimized="true"/>
    <constraints>
        <path orientation="vertical" number="0" weight="0.7" />
        <path orientation="horizontal" number="0" weight="0.3" />
    </constraints>
    <active-tc id="filesystems" prev-id="explorer"/>
    <empty-behavior permanent="true" />
</mode>
